--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "commonjs",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "serverless-http": "^3.2.0",
     "uuid": "^11.1.0"
   },
