--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,34 @@
-service: express-dynamo-api
+service: wcrt-backend
+useDotenv: true
 
 provider:
   name: aws
   runtime: nodejs18.x
   region: eu-north-1
   environment:
-    TABLE_NAME: YourDynamoTableName
+    JWT_SECRET: ${env:JWT_SECRET}
+    ADMIN_TABLE: ${env:ADMIN_TABLE}
+    POSTS_TABLE: ${env:POSTS_TABLE}
+    WRITER_TABLE: ${env:WRITER_TABLE}
+    S3_BUCKET: ${env:S3_BUCKET}
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:PutItem
+        - dynamodb:GetItem
+        - dynamodb:Scan
+        - dynamodb:DeleteItem
+      Resource:
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${env:POSTS_TABLE}
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${env:WRITER_TABLE}
+        - arn:aws:dynamodb:${self:provider.region}:*:table/${env:ADMIN_TABLE}
+    - Effect: Allow
+      Action:
+        - s3:PutObject
+        - s3:GetObject
+        - s3:PutObjectAcl
+      Resource: arn:aws:s3:::${env:S3_BUCKET}/*
 
 functions:
   app:
@@ -17,17 +40,3 @@ functions:
 
 plugins:
   - serverless-offline
-
-resources:
-  Resources:
-    YourDynamoTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: YourDynamoTableName
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
